--- a/runner/Resources/images/sprites/monster.plist
+++ b/runner/Resources/images/sprites/monster.plist
@@ -30,10 +30,49 @@
                 <key>sourceSize</key>
                 <string>{87,90}</string>
             </dict>
+            <key>monster0_left_attack1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{182,3},{60,93}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,93}}</string>
+                <key>sourceSize</key>
+                <string>{60,93}</string>
+            </dict>
+            <key>monster0_left_attack2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{246,3},{87,90}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{87,90}}</string>
+                <key>sourceSize</key>
+                <string>{87,90}</string>
+            </dict>
+            <key>monster0_left_attack3.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{337,3},{84,90}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{84,90}}</string>
+                <key>sourceSize</key>
+                <string>{84,90}</string>
+            </dict>
             <key>monster0_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{182,3},{75,90}}</string>
+                <string>{{425,3},{75,90}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -46,7 +85,7 @@
             <key>monster0_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{261,3},{78,90}}</string>
+                <string>{{3,100},{78,90}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -56,10 +95,49 @@
                 <key>sourceSize</key>
                 <string>{78,90}</string>
             </dict>
+            <key>monster0_right_attack1.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{85,100},{60,93}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{60,93}}</string>
+                <key>sourceSize</key>
+                <string>{60,93}</string>
+            </dict>
+            <key>monster0_right_attack2.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{149,100},{87,90}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{87,90}}</string>
+                <key>sourceSize</key>
+                <string>{87,90}</string>
+            </dict>
+            <key>monster0_right_attack3.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{240,100},{84,90}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{84,90}}</string>
+                <key>sourceSize</key>
+                <string>{84,90}</string>
+            </dict>
             <key>monster1_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{343,3},{59,48}}</string>
+                <string>{{328,100},{59,48}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -72,7 +150,7 @@
             <key>monster1_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{406,3},{59,44}}</string>
+                <string>{{391,100},{59,44}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -85,7 +163,7 @@
             <key>monster1_right3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,97},{63,39}}</string>
+                <string>{{3,197},{63,39}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -98,7 +176,7 @@
             <key>monster2_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{70,97},{59,48}}</string>
+                <string>{{70,197},{59,48}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -111,7 +189,7 @@
             <key>monster2_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{133,97},{59,44}}</string>
+                <string>{{133,197},{59,44}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -124,7 +202,7 @@
             <key>monster2_right3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{196,97},{63,39}}</string>
+                <string>{{196,197},{63,39}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -137,7 +215,7 @@
             <key>monster3_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{263,97},{59,48}}</string>
+                <string>{{263,197},{59,48}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -150,7 +228,7 @@
             <key>monster3_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{326,97},{59,44}}</string>
+                <string>{{326,197},{59,44}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -163,7 +241,7 @@
             <key>monster3_right3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{389,97},{63,39}}</string>
+                <string>{{389,197},{63,39}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -176,7 +254,7 @@
             <key>monster4_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{3,149},{66,78}}</string>
+                <string>{{3,249},{66,78}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -189,7 +267,7 @@
             <key>monster4_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{73,149},{66,76}}</string>
+                <string>{{73,249},{66,76}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -202,7 +280,7 @@
             <key>monster4_right3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{143,149},{66,78}}</string>
+                <string>{{143,249},{66,78}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -215,7 +293,7 @@
             <key>monster5_right1.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{213,149},{74,75}}</string>
+                <string>{{213,249},{74,75}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -228,7 +306,7 @@
             <key>monster5_right2.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{291,149},{74,73}}</string>
+                <string>{{291,249},{74,73}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -241,7 +319,7 @@
             <key>monster5_right3.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{369,149},{74,70}}</string>
+                <string>{{369,249},{74,70}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -259,9 +337,9 @@
             <key>realTextureFileName</key>
             <string>monster.png</string>
             <key>size</key>
-            <string>{512,256}</string>
+            <string>{512,512}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:c72cfc550bc50e516612e1bbba0ded4b$</string>
+            <string>$TexturePacker:SmartUpdate:cf39b63f21e1c2981359b2a25830aea6$</string>
             <key>textureFileName</key>
             <string>monster.png</string>
         </dict>
